--- a/app/src/main/res/drawable/custom_button2.xml
+++ b/app/src/main/res/drawable/custom_button2.xml
@@ -1,7 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
-<shape xmlns:android="http://schemas.android.com/apk/res/android">
+<selector xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <solid android:color="#CC6600"/>
-    <corners android:radius="25dp"/>
+    <item>
+    <shape android:shape="rectangle">
+        <!--apply button background transparent, full opacity-->
+        <solid android:color="#00ffffff"/>
+        <!--make button border solid color, nontransparent-->
+        <stroke android:color="#FFFFFF"
+            android:width="5dp"/>
+        <corners android:radius="25dp"/>
+    </shape>
+</item>
 
-</shape>
+</selector>
